src/index.css
* {
  box-sizing: border-box;
}

:root {
  --background: #242424;
  --text-background: #222222;
  --text: white;
}

/* Layout */
body {
  margin: 0;
  padding: 0;
  margin-bottom: 3em;
  background: var(--background);
  background-image: url("dark_theme_wallpaper.jpg");
  background-repeat: no-repeat;
  background-size: cover;
  color: var(--text);
  font-family: "Open Sans", "Helvetica Neue", sans-serif;
  min-height: 46em;
  
}

/* Layout Links */
a {
  font-weight: 500;
  text-decoration: inherit;
}

a:hover {
  color: black;
  background: var(--text);
}

